cluster/kubebox/kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubebox
  labels:
    template: kubebox
spec:
  ports:
    - name: kubebox
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    name: kubebox
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    external-dns.alpha.kubernetes.io/target: home.cluster.camp
  name: kubebox
spec:
  rules:
  - host: kubebox.cluster.camp
    http:
      paths:
      - path: /
        backend:
          serviceName: kubebox
          servicePort: 8080
    # TO BE UPDATED IF NEEDED
    # host:
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubebox
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: kubebox
  template:
    metadata:
      name: kubebox
      labels:
        name: kubebox
    spec:
      serviceAccountName: kubebox
      containers:
      - image: dockercamp/kubebox:0.5.0
        imagePullPolicy: Always
        name: kubebox
        ports:
        - containerPort: 8080
          protocol: TCP
